			SWI-Prolog ChangeLog
			====================

  * FIXED: Non-portable test in config.guess (Kenneth Pronovici).

  * FIXED: reported undefined predicate by check/0 on plcon.exe (Mike Elston).

  * ENHANCED: Allow for PL_set_feature() before PL_initialise().  Improved
    initialisation procedure for plwin.exe for better compatibility with
    the other versions.

  * ENHANCED: Cleanup procedure on Windows library(shlib) and PL_cleanup():
    try to avoid (some) crashes when unloading foreign code.

  * FIXED: Properly deal with the vararg foreign calling convention
    for cleanup (CUTTED).  Spotted by Sergey Tikhonov.

  * FIXED: Check whether stack sizes are not allocated above physical
    limits (128 MB on 32-bit machines)

  * BUILD: Fixed missing references to `runtex' from various Makefiles
    in the packages (Paulo Moura).

  * FIXED: File/Consult menu of plwin.exe to load the file into the
    user module rather then the win_menu module providing the menu
    interface.

  * FIXED: Use GetWindowsDirectory() rather then the current drive as
    last resort for expanding ~.

  * PORT: Add -fno-strict-aliasing when using GCC.  SWI-Prolog doesn't
    satisfy the requirements for this optimization and some gcc versions
    seem to use it using -O2.


VERSION 5.0.2
=============

  * ADDED: library(time) to the clib package, providing alarm and timeout
    functions.  Works on Unix systems having setitimer() as well as on
    Windows using Multi Media timers.

  * ADDED: PL_handle_signal() to handle synchronous interrupts from foreign
    code.  Option PL_SIGSYNC to PL_signal() to schedule synchronous
    interrupts.

  * FIXED: Try to be a bit more intelligent on the expansion of ~ (home)
    in the Windows versions by checking the various alternatives to be
    existing and writeable directories.  Now prefers %USERPROFILE% over
    %HOMEDRIVE%\%HOMEPATH%.  With help from Lee Sanders.

  * FIXED: PL_recorded_external() handling ground terms.  Spotted by